--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-stage-0": "^7.8.3",
-    "@mdx-js/mdx": "^1.5.1",
-    "@mdx-js/react": "^1.5.1",
+    "@mdx-js/mdx": "^1.6.1",
+    "@mdx-js/react": "^1.6.1",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.3.25",
-    "gatsby-image": "^2.0.39",
+    "gatsby": "^2.21.15",
+    "gatsby-image": "^2.4.2",
     "gatsby-plugin-feed-mdx": "^1.0.0",
-    "gatsby-plugin-google-analytics": "^2.0.18",
-    "gatsby-plugin-manifest": "^2.0.29",
-    "gatsby-plugin-mdx": "^1.0.52",
-    "gatsby-plugin-netlify-cms": "^4.0.0",
+    "gatsby-plugin-google-analytics": "^2.3.1",
+    "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-mdx": "^1.2.6",
+    "gatsby-plugin-netlify-cms": "^4.3.1",
     "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-typography": "^2.5.1",
+    "gatsby-remark-copy-linked-files": "^2.3.2",
     "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
+    "gatsby-remark-responsive-iframe": "^2.4.2",
+    "gatsby-remark-smartypants": "^2.3.1",
     "gatsby-remark-vscode": "^1.0.4",
-    "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-transformer-sharp": "^2.1.18",
-    "netlify-cms-app": "^2.9.1",
+    "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-transformer-sharp": "^2.5.1",
+    "netlify-cms-app": "^2.12.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
@@ -44,7 +44,7 @@
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
