--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "google",
     "prettier",
     "prettier/react",
     "eslint:recommended",
@@ -19,6 +18,11 @@
     "browser": true,
     "es6": true,
     "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
   "rules": {
     "arrow-body-style": "off",
