--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.6.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "gatsby": "^2.21.15",
     "gatsby-image": "^2.4.2",
     "gatsby-plugin-feed-mdx": "^1.0.0",
@@ -47,7 +48,7 @@
     "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.17.0"
+    "prettier": "^1.19.1"
   },
   "homepage": "https://github.com/pmc-a/petermcaree-blog#readme",
   "keywords": [
@@ -62,6 +63,8 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "lint": "eslint 'src/**'",
+    "lint:fix": "eslint 'src/**' --fix",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
